# Shader-Playground

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
api/: main.py
assets/: current_model.txt
assets/models/: current_model.txt  models.json
assets/shaders/: default.vert  phong.frag  phong.vert  shaders.json
client/: CMakeLists.txt  clean_build.bat  rebuild.bat  remake.bat  run.bat
client/src/: Application.cpp  Application.h  Mesh.cpp  Mesh.h  OrbitCamera.cpp  OrbitCamera.h  RemoteAPI.cpp  RemoteAPI.h  Shader.cpp  ShapeLibrary.cpp  main.cpp
shaders/: default.frag  default.vert
src/: Application.cpp  Application.h  ImGuiLayer.cpp  ImGuiLayer.h  Mesh.cpp  Mesh.h  OrbitCamera.cpp  Shader.cpp  Shader.h  ShapeLibrary.h  main.cpp
static/: index.html
